--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -33,5 +33,15 @@
   .right{
     float: right;
     overflow: hidden;
+    .el-form-item{
+      margin-right: 5px;
+      margin-bottom: 0;
+      .el-form-item__content{
+        .el-input__inner{
+          width: 100px;
+          padding: 0 5px;
+        }
+      }
+    }
   }
 }
